# 3-Qubit.py

./: .gitignore  3-Qubit.html  3-Qubit.py  README.md  mb  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml  python.yml
src/quantum/: three_qubit.py
src/qubits/: __init__.py  three_qubit.py
tests/: test_quantum.py  test_three_qubit.py
